// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - private - services - weather - WeatherCard => Test when dont have Icon name 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.www"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
    </div>
    <div
      class="box-icon"
    >
      
      <p
        class="com-text --font-bold --twoxl"
      >
        25
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <div
      class="temperature"
    >
      <span
        class="com-text --5xs"
      >
        Mín:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        18º
      </span>
      <span
        class="com-text --5xs"
      >
        Máx:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        18º
      </span>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.www"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have location name 1`] = `<div />`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have min and max temperature and dont have link 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <span
        class="com-text"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </span>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12m0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8M11 1h2v3h-2zm0 19h2v3h-2zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414zm2.121-14.85 1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414zM23 11v2h-3v-2zM4 11v2H1v-2z"
            fill="#272727"
          />
        </svg>
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have min or max temperature  1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12m0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8M11 1h2v3h-2zm0 19h2v3h-2zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414zm2.121-14.85 1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414zM23 11v2h-3v-2zM4 11v2H1v-2z"
            fill="#272727"
          />
        </svg>
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when have complete data 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12m0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8M11 1h2v3h-2zm0 19h2v3h-2zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414zm2.121-14.85 1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414zM23 11v2h-3v-2zM4 11v2H1v-2z"
            fill="#272727"
          />
        </svg>
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <div
      class="temperature"
    >
      <span
        class="com-text --5xs"
      >
        Mín:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        0º
      </span>
      <span
        class="com-text --5xs"
      >
        Máx:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        25º
      </span>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;
